@@ -11,6 +11,10 @@ Evan Wright, Shlomy Reinstein, Marcelo Vanzin and Eric Le Lay for contributing
 to this release.
 
 {{{ Bug fixes
+- Fixed a corner case when trying to move caret during a buffer operation
+  (loading, transaction, undo) prevent to move the caret forever
+  (Matthieu Casanova)
+
 - Fixed several case where userinput during buffer loading cause exceptions
   (#3398342) (Matthieu Casanova)
 
